Fix material animation not showing on the "accept friend request" button

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -676,3 +676,11 @@ a {
 		font-style: italic;
 	}
 }
+
+
+
+.notifications {
+	.accept {
+		color: #FF4081;
+	}
+}
